--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -14,8 +14,14 @@ jobs:
           token: ${{ secrets.METRICS_TOKEN }}
           user: PinkLolicorn
           template: classic
-          base: header, activity, community, repositories, metadata
+          base: header, activity, community, metadata
           config_timezone: Europe/Warsaw
+          plugin_activity: yes
+          plugin_activity_days: 14
+          plugin_activity_filter: all
+          plugin_activity_limit: 5
+          plugin_activity_load: 300
+          plugin_activity_visibility: all
           plugin_discussions: yes
           plugin_discussions_categories: yes
           plugin_isocalendar: yes
@@ -55,10 +61,4 @@ jobs:
           plugin_achievements_display: detailed
           plugin_achievements_secrets: yes
           plugin_achievements_threshold: C
-          plugin_activity: yes
-          plugin_activity_days: 14
-          plugin_activity_filter: all
-          plugin_activity_limit: 5
-          plugin_activity_load: 300
-          plugin_activity_visibility: all
           filename: "profile1.svg"
